# empirica

./: .gitignore  CHANGELOG.md  DOCKERHUB_README.md  Dockerfile  Dockerfile.alpine  README.md  SECURITY.md  claude-safe  patch_windows_utf8.py  pyproject.toml
.claude-backup/: settings.local.json
.claude/plans/: code-quality-b-grade.md  memory-management-system.md  prediction-grounding-reframe.md  v1.7.4-release.md
.claude/skills/empirica-framework/: SKILL.md
.docker/: README.md
.empirica/: VISION.md
.empirica-project/: PROJECT_CONFIG.yaml
.github/: ISSUES_found_2026-01-13.md  ISSUE_migration_bug.md  copilot-instructions.md
claude-code-integration/: install.sh
claude-code-integration/.claude-plugin/: plugin.json
claude-code-integration/agents/: outreach-factscorer.md  outreach-search.md  security-expert.md  ux-specialist.md  ux.md
claude-code-integration/commands/: empirica.md
claude-code-integration/hooks/: sentinel-gate.py  session-init.py  subagent-stop.py  transaction-enforcer.py
claude-code-integration/skills/empirica/: SKILL.md
claude-code-integration/skills/empirica-framework/: SKILL.md
claude-code-integration/templates/: settings-hooks.json
docs/: README.md
docs/architecture/: AI_WORKFLOW_AUTOMATION.md  CANONICAL_STORAGE.md  DISPATCH_BUS.md  EPISTEMIC_AGENT_ARCHITECTURE.md  EPP_ARCHITECTURE.md  HANDOFF_SYSTEM.md  MEMORY_ARCHITECTURE.html  MEMORY_ARCHITECTURE.md  MULTI_PROJECT_STORAGE.md  PHASE_AWARE_CALIBRATION.md  README.md  SELF_MONITORING.md  SENTINEL_ARCHITECTURE.md  SENTINEL_CONSTITUTION.md  STORAGE_ARCHITECTURE_COMPLETE.md  SUBAGENT_EPISTEMIC_ASSESSMENT.md  claude-code-symbiosis.md  noetic-rag-architecture.md  separation-of-concerns.md
docs/architecture/instance_isolation/: ARCHITECTURE.md  CLAUDE_CODE.md  KNOWN_ISSUES.md  MCP_AND_CLI.md  README.md
docs/guides/: README.md  TMUX_MULTI_PANE_GUIDE.md  UPGRADE_TO_1.7.md
docs/human/developers/: CLAUDE_CODE_SETUP.md  CLI_COMMANDS_UNIFIED.md  EXTENDING_EMPIRICA.md  MCP_SERVER_REFERENCE.md  TRAINING_WITH_EMPIRICA.md
docs/human/end-users/: 01_START_HERE.md  (+9 more)
docs/reference/: CHANGELOG.md  CLI_ALIASES.md  CONFIGURATION_REFERENCE.md  DATABASE_SCHEMA_UNIFIED.md  ENVIRONMENT_VARIABLES.md  MEMORY_MANAGEMENT_COMMANDS.md  SENTINEL_GATE_REFERENCE.md  SESSION_RESOLVER_API.md  STATUSLINE_REFERENCE.md  TAXONOMY.md  WORKSPACE_DATABASE_SCHEMA.md
empirica/: .gitignore  __init__.py
empirica-mcp/: README.md  pyproject.toml
empirica-mcp/empirica_mcp/: __init__.py  server.py
empirica/api/: app.py  auth.py  serve_app.py  validation.py
empirica/cli/: __init__.py  __main__.py  asyncio_fix.py  cli_core.py  cli_utils.py  validation.py
empirica/components/: empirical_performance_analyzer.py
empirica/config/: __init__.py  credentials_loader.py  database_config.py  domain_registry.py  goal_scope_loader.py  mco_loader.py  path_resolver.py  profile_loader.py  project_config_loader.py  semantic_index_loader.py  service_registry.py  threshold_loader.py
empirica/core/: __init__.py  attention_budget.py  bayesian_beliefs.py  bus_persistence.py  checkpoint_signer.py  context_budget.py  dispatch_bus.py  ecosystem.py  emerged_personas.py  epistemic_brief.py  epistemic_bus.py  epistemic_rollup.py  epistemic_trajectory.py  findings_deprecation.py  information_gain.py  issue_capture.py  memory_manager.py  parallel_orchestrator.py  signaling.py  statusline_cache.py  system_dashboard.py  thresholds.py  workflow_patterns.py
empirica/data/: __init__.py  connection_pool.py  crm_schema.py  db_adapter.py  epistemic_snapshot.py  flow_state_calculator.py  session_database.py  snapshot_provider.py
empirica/integration/: empirica_action_hooks.py
empirica/integrations/: branch_mapping.py
empirica/metrics/: flow_state.py  token_efficiency.py
empirica/utils/: __init__.py  cli_doc_validator.py  doc_code_integrity.py  finding_refs.py  memory_swap.py  session_resolver.py  structure_health.py
empirica/vision/: readable_translator.py  slide_processor.py
examples/: README.md
examples/codebase-onboarder/: README.md  agent.md  sample-output.md
examples/competitor-monitor/: README.md  agent.md  competitors.example.yaml
examples/missed-opportunities/: README.md  agent.md
examples/token-budget/: README.md  agent.md
packaging/chocolatey/: empirica.nuspec
packaging/homebrew/: empirica.rb
scripts/: QUICK_REFERENCE.md  RELEASE_PROCESS.md  agentic_benchmark.py  benchmark_tui.py  empirica-collab-sync.sh  empirica_benchmark.py  generate_semantic_index.py  install.py  llm_benchmark.py  phase0_epp_calibration.py  phase0_epp_results.json  phase0_epp_scenarios.yaml  release.py  verify_qdrant_integrity.py
tests/: conftest.py  test_ai_agent_workflow.py  test_breadcrumb_dedup.py  test_connection_resilience.py  test_cross_profile_behavior.py  test_diagnose.py  test_git_state_capture.py  test_goal_handoff_regression.py  test_memory_manager.py  test_memory_swap.py  test_open_transaction_guard.py  test_project_switch.py  test_security_audit.py  test_security_kev_feed.py  test_security_scope.py  test_session_resolver.py  test_subagent_sessions.py
tests/config/: test_check_brier.py  test_compliance_loop.py  test_domain_registry.py  test_service_registry.py  test_three_vector_storage.py
tests/core/: test_check_calibration_nudge.py  test_dispatch_bus.py  test_message_store_subscribe.py
tests/integration/: test_cli_checkpoint_commands.py  test_dispatch_bus_e2e.py  test_e2e_workflows.py  test_goal_architecture_e2e.py  test_session_database_git.py  test_wave1_contract.py
tests/integrations/: test_beads_adapter.py
tests/integrity/: test_checkpoint_bugs_regression.py  test_cli_contracts.py  test_import_integrity.py  test_version_consistency.py
tests/persona/: test_persona_basic.py
tests/security/: conftest.py  test_sql_injection.py
tests/unit/: test_all_cli_commands.py  test_artifact_extractor.py  test_attention_budget.py  test_bootstrap_cleanup.py  test_git_enhanced_reflex_logger.py  test_qdrant_retrieval_regressions.py  test_token_efficiency_metrics.py  test_transcript_parser.py  test_windows_atomic_state_writes.py
(+370 files in other folders)
