[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "empirica-mcp"
version = "1.8.11"
description = "MCP server for Empirica — AI measurement and calibration tools via Model Context Protocol"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "David S. L. Van Assche"},
]
keywords = ["mcp", "empirica", "calibration", "ai", "measurement", "epistemic"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "empirica>=1.7.0",  # Main package (1.8.11 co-released)
    "mcp>=1.25.0",      # MCP SDK (python-multipart CVE-2026-24486 fix in 1.25+)
]

[project.urls]
Homepage = "https://github.com/Nubaeon/empirica"
Documentation = "https://github.com/Nubaeon/empirica/tree/main/docs"
Repository = "https://github.com/Nubaeon/empirica"
Issues = "https://github.com/Nubaeon/empirica/issues"

[project.scripts]
empirica-mcp = "empirica_mcp.server:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["empirica_mcp"]
